fixed white spaces and style bugs

--- a/style.css
+++ b/style.css
@@ -169,7 +169,6 @@ body {
 /* main */
 .padding-main {
   width: 100vw;
-  padding-top: 10px;
 }
 ::-webkit-scrollbar {
   width: 10px;
@@ -183,7 +182,7 @@ body {
   background: rgb(126, 126, 126);
 }
 main {
-  padding: 20px 0;
+  padding: 0 0 20px 0;
 }
 .main-wrapper {
   z-index: 0;
@@ -223,8 +222,8 @@ main {
 .seventh-image-container-text a {
   font-family: "TBCX";
   text-decoration: none;
-  background-image: linear-gradient(15deg, #001682, #3240e5);
-  background-color: #4778dc;
+  background: linear-gradient(15deg, #001682, #3240e5);
+  background-color: #3240e5;
   text-align: center;
   font-weight: bold;
   font-size: 13px;
@@ -237,21 +236,25 @@ main {
 }
 .image-container button:hover,
 .seventh-image-container-text a:hover {
-  transition: 1s ease-out;
-  background-image: none;
+  transition: 0.3s ease-in-out;
+  background: #4a74e8;
 }
 .concept-text {
   margin-top: 30px;
-  padding: 80px 0;
+  padding: 60px 0;
   font-size: 30px;
 }
 
 /* sections */
+#first-section,
 #second-section,
 #third-section,
+#fourth-section,
 #fifth-section,
-#seventh-section {
-  padding: 50px 0;
+#sixth-section,
+#seventh-section,
+#last-section {
+  padding: 30px 0;
 }
 .grid-template {
   display: grid;
@@ -955,8 +958,9 @@ main {
   #fourth-section,
   #fifth-section,
   #sixth-section,
+  #seventh-section,
   #last-section {
-    padding: 50px 10px;
+    padding: 20px 10px;
   }
 
   .digital-bank {
